# gedit

./: .gitmodules  ChangeLog  GNOME_Gedit.server  Makefile.am  TODO  acconfig.h  configure.ac  configure.in  gedit.gnorba  gedit.schemas  makeconfig.pl
bindings/python/: Makefile.am  gedit.defs  gedit.override  geditplugin.override  geditplugins.defs  geditplugins.override
data/: Makefile.am  gedit.schemas.in  org.gnome.gedit.gschema.in.in  org.gnome.gedit.gschema.xml.in.in  org.gnome.gedit.schemas.in
docs/reference/: Makefile.am  gedit-docs.sgml  gedit-sections.txt  gedit.types
docs/reference/tmpl/: gedit-app.sgml  gedit-document.sgml  gedit-encodings-option-menu.sgml  gedit-file-chooser-dialog.sgml  gedit-message-area.sgml  gedit-message-type.sgml  gedit-notebook.sgml  gedit-panel.sgml  gedit-progress-message-area.sgml  gedit-statusbar.sgml  gedit-tab.sgml  gedit-unused.sgml  gedit-view.sgml  gedit-window.sgml
gcode/: Makefile.am  gcode-debug.c  gcode-debug.h  gcode-utils.c  gcode-utils.h  gcode.h
gedit/: ChangeLog  Makefile.am  bonobo-mdi.c  commands.c  commands.h  corba-glue.h  gE_document.c  gE_files.c  gE_mdi.c  gE_plugin_api.c  gE_prefs.h  gE_print.c  gedit-app.c  gedit-app.h  gedit-command-line.h  gedit-commands-documents.c  gedit-commands-file-print.c  gedit-commands-file.c  gedit-commands-messages.c  gedit-commands-search.c  gedit-commands-view.c  gedit-commands.c  gedit-commands.h  gedit-dbus.c  gedit-debug-utility.c  gedit-debug-utility.h  gedit-debug.c  gedit-debug.h  gedit-document-input-stream.c  gedit-document-input-stream.h  gedit-document-loader.c  gedit-document-loader.h  gedit-document-output-stream.c  gedit-document-output-stream.h  gedit-document-saver.c  gedit-document-saver.h  gedit-document.c  gedit-document.h  gedit-documents-panel.c  gedit-documents-panel.h  (+99 more)
gedit/dbus/: Makefile.am  gedit-dbus-message.c  gedit-dbus-message.h  gedit-dbus-message.xml  gedit-dbus.c  gedit-dbus.h  gedit-dbus.xml
gedit/dialogs/: gedit-encodings-dialog.c  gedit-preferences-dialog.c  gedit-preferences-dialog.glade
gedit/gcode/: Makefile.am  gcode-document.c  gcode-document.h  gcode-gedit.h  gcode-metadata-manager.c  gcode-metadata-manager.h  gcode.h
gedit/plugins/: Makefile.am  gedit-plugin-info-priv.h  gedit-plugin-info.c  gedit-plugin-info.h  gedit-plugin-python-utils.c  gedit-plugin-python-utils.h  gedit-plugin.c  gedit-plugin.h  gedit-plugins-engine.c  gedit-plugins-engine.h  gedit-python-plugin.c  gedit-python-plugin.h
help/C/: gedit-shortcut-keys.page
plugin-loaders/c/: Makefile.am  cloader.gedit-plugin-loader.desktop.in  gedit-plugin-loader-c.c
plugin-loaders/python/: Makefile.am  gedit-plugin-loader-python.c  gedit-plugin-python.c  gedit-plugin-python.h  pythonloader.gedit-plugin-loader.desktop.in
plugin-loaders/python/bindings/: Makefile.am  gedit.defs  gedit.override  geditmessage.override
plugins/changecase/: Makefile.am  gedit-changecase-plugin.h
plugins/checkupdate/: Makefile.am
plugins/docinfo/: Makefile.am  gedit-docinfo-plugin.h
plugins/externaltools/data/: send-to-fpaste.tool.in
plugins/externaltools/tools/: functions.py  manager.py
plugins/filebrowser/: Makefile.am  gedit-file-bookmarks-store.c  gedit-file-browser-messages.c  gedit-file-browser-plugin.c  gedit-file-browser-plugin.h  gedit-file-browser-store.c  gedit-file-browser-store.h  gedit-file-browser-view.c  gedit-file-browser-widget.c  gedit-file-browser-widget.h
plugins/filebrowser/bindings/: Makefile.am  filebrowser.defs  filebrowser.override
plugins/indent/: gedit-indent-plugin.h
plugins/modelines/: Makefile.am  gedit-modeline-plugin.h
plugins/pythonconsole/pythonconsole/: __init__.py  console.py
plugins/sample/: gedit-sample-plugin.h
plugins/snippets/snippets/: SnippetPluginInstance.py  SnippetsDialog.py
plugins/sort/: Makefile.am  gedit-sort-plugin.h
plugins/spell/: Makefile.am  gedit-automatic-spell-checker.c  gedit-spell-plugin.h
plugins/taglist/: gedit-taglist-plugin-panel.c  gedit-taglist-plugin.c  gedit-taglist-plugin.h
plugins/time/: Makefile.am  gedit-time-plugin.h
plugins/zeitgeist/: Makefile.am  gedit-zeitgeist-plugin.c
po/: POTFILES.in  cs.po  es.po  fr.po  ga.po  it.po  ja.po  ko.po  nl.po  no.po  pt.po  ru.po  sv.po
src/: .cvsignore  ChangeLog  Makefile.am  bonobo-mdi.c  bonobo-mdi.h  commands.c  commands.h  editor.c  gE_document.c  gE_files.c  gE_mdi.c  gE_mdi.h  gE_plugin_api.c  gE_prefs.c  gE_prefs.h  gE_prefs_box.c  gE_view.c  gedit-application-server.c  gedit-document.c  gedit-mdi.c  gedit.c  gedit2.c  main.h  menus.c
tests/: Makefile.am  document-input-stream.c
